# game_engine_lib

./: .gitignore  CMakeLists.txt  compile.sh  readme.md  vulkan.sh
assets/: CMakeLists.txt
assets/config/: config.ini
assets/include/assets/: asset.hpp  asset_id.hpp  asset_manager.hpp  asset_task_manager.hpp  glyph_mesh_asset.hpp  glyph_mesh_create_args.hpp  spine_asset.hpp  spine_asset_promise.hpp  spine_load_args.hpp  spine_manager.hpp  texture_address_mode.hpp  texture_asset.hpp  texture_asset_promise.hpp  texture_create_args.hpp  texture_filter.hpp  texture_load_args.hpp
assets/shaders/vk/: model.frag  model.vert  sprite.frag  sprite.vert
assets/src/: asset_manager.cpp  asset_task_manager.cpp
demo/: CMakeLists.txt  readme.md
demo/include/demo/input/: input_action_ids.hpp
demo/include/demo/prefabs/: entity_prefabs.hpp
demo/include/demo/screens/: demo_screen.hpp  init_screen.hpp
demo/include/demo/systems/: demo_system.hpp
demo/include/demo/ui/: demo_state.hpp
demo/src/: main.cpp
demo/src/prefabs/: entity_prefabs.cpp
demo/src/screens/: demo_screen.cpp  init_screen.cpp
demo/src/systems/: demo_system.cpp
demo/src/ui/: demo_state.cpp
ecs/: CMakeLists.txt  readme.md
ecs/include/ecs/: ecs_root.hpp  entity.hpp  entity_handle.hpp  entity_manager.hpp  entity_system.hpp  entity_system_base.hpp
ecs/src/: ecs_root.cpp  entity_manager.cpp  entity_system_base.cpp
engine/: CMakeLists.txt
engine/include/engine/: asset_manager.hpp  engine.hpp  game.hpp  render_api.hpp  system_manager.hpp  time.hpp
engine/include/engine/base_systems/: base_system_ids.hpp  base_system_util.hpp  config_system.hpp  debug_gui_system.hpp  debug_gui_util.hpp  editor_system.hpp  name_system.hpp  profile_system.hpp
engine/include/engine/debug_gui/: config_system_debug_gui.hpp  config_system_debug_panel.hpp  debug_gui_system_debug_gui.hpp  debug_gui_system_debug_panel.hpp  debug_panel.hpp  entity_debug_info.hpp  (+8 more)
engine/src/: asset_manager.cpp  engine.cpp  game.cpp  system_manager.cpp  time.cpp
engine/src/base_systems/: base_system_util.cpp  config_system.cpp  debug_gui_system.cpp  editor_system.cpp  profile_system.cpp
engine/src/debug_gui/: config_system_debug_gui.cpp  config_system_debug_panel.cpp  debug_gui.cpp  debug_gui_system_debug_gui.cpp  debug_gui_system_debug_panel.cpp  debug_panel.cpp  entity_debug_info.cpp  entity_info.cpp  name_system_debug_gui.cpp  name_system_debug_panel.cpp  profile_system_debug_gui.cpp  profile_system_debug_panel.cpp
engine/src/editor/: editor_panel.cpp  name_system_editor_panel.cpp
engine/src/imgui/: imgui_base.cpp
engine/src/screens/: screen.cpp  screen_manager.cpp
engine/src/systems/: base_system_util.cpp  config_system.cpp  debug_gui_system.cpp  profile_system.cpp
engine/src/ui/: ui_state.cpp  ui_state_manager.cpp
extlibs/: CMakeLists.txt
filesystem/: CMakeLists.txt
filesystem/include/filesystem/: paths.hpp
filesystem/src/: paths.cpp
input/: CMakeLists.txt  readme.md
input/include/input/: axis_sign.hpp  gamepad.hpp  gamepad_state.hpp  input_action.hpp  input_action_id.hpp  input_action_set.hpp  input_bind.hpp  input_bind_map.hpp  input_device.hpp  input_event.hpp  input_event_type.hpp  input_manager.hpp  input_source.hpp  input_state.hpp  input_type.hpp  input_types.hpp  keyboard.hpp  mouse.hpp
input/src/input/: gamepad.cpp  input_device.cpp  input_manager.cpp  keyboard.cpp  mouse.cpp
render_vk/: CMakeLists.txt  readme.md
render_vk/include/render_vk/: asset_task_manager.hpp  billboard_pipeline.hpp  buffer.hpp  color_image.hpp  command_buffer.hpp  command_pool.hpp  debug_utils.hpp  depth.hpp  descriptor_pool.hpp  descriptor_set_layout.hpp  descriptor_set_manager.hpp  descriptor_sets.hpp  devices.hpp  dynamic_uniform_buffer.hpp  frame.hpp  frame_objects.hpp  frame_sync.hpp  framebuffers.hpp  glyph_vertex.hpp  graphics_pipeline.hpp  image.hpp  image_view.hpp  index_buffer.hpp  instance.hpp  mesh.hpp  model_manager.hpp  queue_family.hpp  render_job_manager.hpp  render_pass.hpp  render_task_manager.hpp  shader.hpp  spine.hpp  spine_manager.hpp  spine_model.hpp  sprite_pipeline.hpp  texture.hpp  texture_id.hpp  texture_manager.hpp  thread_manager.hpp  ubo.hpp  (+13 more)
render_vk/src/: asset_task_manager.cpp  billboard_pipeline.cpp  buffer.cpp  color_image.cpp  command_buffer.cpp  command_pool.cpp  debug_utils.cpp  depth.cpp  descriptor_pool.cpp  descriptor_set_layout.cpp  descriptor_set_manager.cpp  descriptor_sets.cpp  devices.cpp  dynamic_uniform_buffer.cpp  frame_sync.cpp  framebuffers.cpp  gltf.cpp  graphics_pipeline.cpp  image.cpp  image_view.cpp  index_buffer.cpp  instance.cpp  mesh.cpp  model_manager.cpp  queue_family.cpp  render_job_manager.cpp  render_pass.cpp  render_task_manager.cpp  shader.cpp  spine.cpp  spine_extension.cpp  spine_manager.cpp  sprite_pipeline.cpp  texture.cpp  texture_manager.cpp  thread_manager.cpp  ubo_dynamic.cpp  uniform.cpp  vertex_buffer.cpp  vulkan_asset_task_manager.cpp  (+6 more)
render_vk/src/debug_gui/: vulkan_debug_panel.cpp
render_vk/src/imgui/: imgui_vk.cpp
render_vk/src/render_tasks/: draw_models_task.cpp  load_model_task.cpp  load_texture_task.cpp  task_draw_billboards.cpp  task_draw_models.cpp  task_draw_sprites.cpp  task_update_uniforms.cpp  update_ubo_task.cpp
render_vk/src/renderers/: billboard_renderer.cpp  glyph_renderer.cpp  model_renderer.cpp  spine_sprite_renderer.cpp  sprite_renderer.cpp  vulkan_model_renderer.cpp
spine/: CMakeLists.txt
systems/: CMakeLists.txt  readme.md
systems/include/systems/: billboard_system.hpp  camera_system.hpp  config_system.hpp  glyph_system.hpp  model_system.hpp  move_system.hpp  name_system.hpp  position_system.hpp  profile_system.hpp  spine_system.hpp  sprite_system.hpp  system_ids.hpp  system_util.hpp
systems/src/: camera_system.cpp  config_system.cpp  move_system.cpp  profile_system.cpp  system_util.cpp
systems/src/debug_gui/: name_system_debug_gui.cpp  position_system_debug_panel.cpp
systems/src/editor/: camera_system_editor_panel.cpp  model_system_editor_panel.cpp  move_system_editor_panel.cpp  position_system_editor_panel.cpp
(+101 files in other folders)
